--- a/index.html
+++ b/index.html
@@ -4,12 +4,95 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body{
+      color: #fff;
+      font-family: 'Nunito Semibold';
+      text-align: center;
+    }
+    #content{
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      grid-template-rows: repeat(4, minmax(150px, auto));
+      /*grid-auto-rows: minmax(200px, auto);*/
+      /*grid-template-rows: repeat(3, minmax(200px, auto));*/
+      grid-gap: 10px;
+      max-width: 960px;
+      margin: 0 auto;
+    }
+    #content div{
+      background: #3bbced;
+      padding: 30px;
+    }
+    #content div:nth-child(even){
+      background: #777;
+    }
+    .one{
+      /*grid-column-start: 1;
+      grid-column-end: 3;*/
+      grid-column: 1/3;
+      align-self: start;
+      justify-self: start;
+    }
+    .two{
+      grid-column: 3/7;
+      align-self: center;
+      justify-self: center;
+    }
+    .three{
+      grid-column: 1/4;
+      grid-row: 2/4;
+    }
+    .four{
+      grid-column: 4/7;
+      grid-row: 2/4;
+      align-self: start;
+      justify-self: start;
+    }
+    .five{
+      grid-column: 3/7;
+    }
+    .six{
+      grid-column: 1/3;
+      grid-row: 4;
+    }
+    .nested{
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 40px;
+    }
+    .nested p{
+      border: 1px solid #fff;
+      padding: 60px;
+      margin: 0;
+    }
+  </style>
+  <!-- <link rel="stylesheet" href="style.css"> -->
   <title>CSS grid layouts</title>
 </head>
 <body>
-  <div class="container">
-    Code Block
+  <div id="content">
+    <div class="one">1</div>
+    <div class="two">2</div>
+    <div class="three">
+      <div class="nested">
+        <p>
+          1
+        </p>
+        <p>
+          2
+        </p>
+        <p>
+          3
+        </p>
+        <p>
+          4
+        </p>
+      </div>
+    </div>
+    <div class="four">4</div>
+    <div class="five">5</div>
+    <div class="six">6</div>
   </div>
 </body>
 </html>
